<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/AppTheme.PopUpOverlay"
            app:title="">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Custom horizontally centered textView for title -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="-24dp"
                    android:text="@string/airtel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_airtel"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape_oval_gray"
            android:drawableEnd="@drawable/ic_search_grey_24dp"
            android:hint="@string/search_for_a_problem"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/recent_issues"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvKeyActions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnViewAllOptions"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/view_all_options"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="#3aaa"
            app:strokeColor="@color/mediumGrey"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCallCustomerCare"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:padding="8dp"
            android:text="@string/call_customer_care"
            android:textColor="@color/colorAccentDark"
            android:textStyle="bold"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="#3aaa"
            app:strokeColor="@color/colorAccentDark"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/flNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#afff"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivNoWifiIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_above="@+id/tvNoInternet"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_signal_wifi_off_grey_24dp" />

        <TextView
            android:id="@+id/tvNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="24dp"
            android:text="Not connected to the Internet."
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:drawableEnd="@drawable/ic_replay_black_24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/retry" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>